# rag-ikea-grupo3

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
config/: __init__.py  settings.py
data/chroma_db/c61d9f3a-0ce5-4195-ba35-d76b413d6c5d/: index_metadata.pickle
data/raw/csv/: ikea.csv
scripts/: index_documents.py
src/data_ingestion/: csv_parser.py  pdf_parser.py
src/embeddings/: aws_embeddings.py
src/retrieval/: retriever.py
src/vectorstore/: chroma_store.py
vectorstore/: chroma_store.py
