[project]
name = "rag-ikea-grupo3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.69",
    "chromadb>=1.5.5",
    "docx2txt>=0.9",
    "langchain>=1.2.12",
    "langchain-aws>=1.4.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-text-splitters>=1.1.1",
    "loguru>=0.7.3",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.9.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "reportlab>=4.4.10",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
